[package]
name = "fl_uid"
version = "0.1.1"
edition = "2024"
exclude = ["src/main.rs"]
authors = ["Flora Hill"]
repository = "https://github.com/tascord/fluid"
license = "MIT"
description = "Human readable UIDs"

[dependencies]
bincode = "2.0.1"
rand = "0.9.1"
serde = { version = "^1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "^1.0"
